bugfix jump collision and mobile view

--- a/style.css
+++ b/style.css
@@ -24,6 +24,12 @@ a {
     color: black;
 }
 
+.widescreen {
+    max-width: 1920px;
+    margin: auto;
+    position: relative;
+    width: 100%;
+}
 .overlay {
     position: fixed;
     height: 100vh;
@@ -71,9 +77,10 @@ h1 {
 
 .start-game-mobile {
     position: absolute;
-    top: 15px;
-    left:15px;
-    font-size: 20px;
+    top: 60px;
+    left:50%;
+    transform: translate(-50%, -50%);
+    font-size: 25px;
 }
 
 .inprint-mobile {
@@ -145,7 +152,6 @@ canvas {
 .start-picture-mobile {
     width: 100%;
     height: auto;
-    cursor: pointer;
     object-fit: contain;
 }
 
@@ -191,12 +197,19 @@ canvas {
     display: none;
 }
 
+.landscape-text {
+    font-size: 20px;
+    text-align: center;
+    margin-bottom: 30px;
+    margin-top: 40px;
+}
+
 .impressum-container {
     display: flex;
     flex-direction: column;
     align-items: baseline;
-    width: 90%;
-    margin: 100px 0 0 20% ;
+    width: 40%;
+    margin: 60px 0 0 30px ;
 }
 
 .impressum-back {
@@ -219,8 +232,6 @@ canvas {
     display: flex;
     justify-content: baseline;
 }
-
-
 
 
 
@@ -269,6 +280,10 @@ canvas {
         display: none;
     }
 
+    .legal-notice-link {
+        display: none;
+    }
+
     .impressum-back {
         margin-bottom: 20px;
         width: 20px;
@@ -280,6 +295,10 @@ canvas {
 
     canvas {
         height: 100vh;
+    }
+
+    .fullscreen {
+        display: none;
     }
 
     .canvas-container {
@@ -322,6 +341,11 @@ canvas {
         display: none;
     }
 
+    .legal-notice-link {
+        display: none;
+    }
+
+
     .impressum-back {
         margin-bottom: 20px;
         width: 20px;
@@ -331,6 +355,12 @@ canvas {
 
 @media screen and (orientation:portrait) {
     .start-picture {
+        display: none;
+    }
+
+
+
+    .fullscreen {
         display: none;
     }
 
@@ -369,10 +399,33 @@ canvas {
         text-shadow: 2px 6px 2px rgb(0, 0, 0, 0.5);
         text-align: center;
     }
+
+    h1 {
+      display: none;  
+    }
+
+    .click-start-container {
+        display: none;  
+    }
+
+    .landscape-headline {
+        font-size: 40px;
+    }
+
+    .control-container {
+        display: none; 
+    }
+
+    .legal-notice {
+        display: none; 
+    }
 }
 
 @media screen and (orientation:landscape) {
-   
+    .start-picture-mobile {
+        height: inherit;
+    }
+
 }
 
 @media (min-aspect-ratio: 2/1) {
